--- a/data/organize_inverter.ipynb
+++ b/data/organize_inverter.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:30:15.482671900Z",
-     "start_time": "2023-10-22T15:30:15.482671900Z"
+     "end_time": "2023-10-23T15:36:50.004732500Z",
+     "start_time": "2023-10-23T15:36:48.314738500Z"
     }
    },
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "inverter = pvlib.pvsystem.retrieve_sam(\n",
@@ -30,15 +30,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:30:15.760622100Z",
-     "start_time": "2023-10-22T15:30:15.727605200Z"
+     "end_time": "2023-10-23T15:36:50.044744200Z",
+     "start_time": "2023-10-23T15:36:50.005728800Z"
     }
    },
    "id": "57d53670986f126c"
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "names_split = [name.split(\"_\") for name in inverter.keys()]\n",
@@ -47,15 +47,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:30:16.010144100Z",
-     "start_time": "2023-10-22T15:30:15.995357200Z"
+     "end_time": "2023-10-23T15:36:50.067913200Z",
+     "start_time": "2023-10-23T15:36:50.045744Z"
     }
    },
    "id": "e7ec7c93aa585f39"
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "inverter_database = {}\n",
@@ -82,26 +82,26 @@
     "        inverter_database[manufacturer] = {}\n",
     "    if series not in inverter_database[manufacturer]:\n",
     "        inverter_database[manufacturer][series] = {}\n",
-    "    inverter_database[manufacturer][series][model] = inverter[\"_\".join(name_split)].to_dict()"
+    "    inverter_database[manufacturer][series][model] = {k:v if v != \"NaN\" else None for k,v in inverter[\"_\".join(name_split)].to_dict().items()}"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:30:42.894890100Z",
-     "start_time": "2023-10-22T15:30:42.535165Z"
+     "end_time": "2023-10-23T15:36:50.597482300Z",
+     "start_time": "2023-10-23T15:36:50.069913Z"
     }
    },
    "id": "c8edb6ad86e72e29"
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "{'Vac': '208',\n 'Pso': 20.301853,\n 'Paco': 10100.0,\n 'Pdco': 10452.24707,\n 'Vdco': 345.0,\n 'C0': -2.961646e-06,\n 'C1': -4.789613e-06,\n 'C2': -0.000714,\n 'C3': -0.001077,\n 'Pnt': 3.03,\n 'Vdcmax': 480.0,\n 'Idcmax': 30.296368,\n 'Mppt_low': 100.0,\n 'Mppt_high': 480.0,\n 'CEC_Date': nan,\n 'CEC_Type': 'Utility Interactive'}"
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,36 +112,40 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:31:21.947985100Z",
-     "start_time": "2023-10-22T15:31:21.940789500Z"
+     "end_time": "2023-10-23T15:36:50.620823500Z",
+     "start_time": "2023-10-23T15:36:50.602482600Z"
     }
    },
    "id": "304d3bd516037479"
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "with open(\"G:/projects/solar-power-estimator/data/inverter_database.json\", \"w\") as f:\n",
-    "    json.dump(inverter_database, f)"
+    "    json.dump(inverter_database, f, indent=2)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:30:51.246192100Z",
-     "start_time": "2023-10-22T15:30:51.040233300Z"
+     "end_time": "2023-10-23T15:36:50.865139200Z",
+     "start_time": "2023-10-23T15:36:50.612825500Z"
     }
    },
    "id": "8e539f6b2f448c42"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-23T15:36:50.878241500Z",
+     "start_time": "2023-10-23T15:36:50.867246400Z"
+    }
    },
    "id": "52a3918745014987"
   }
