--- a/data/organize_modules.ipynb
+++ b/data/organize_modules.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:20:05.214114Z",
-     "start_time": "2023-10-22T15:20:00.415942600Z"
+     "end_time": "2023-10-23T15:32:43.785785600Z",
+     "start_time": "2023-10-23T15:32:39.248562800Z"
     }
    },
    "outputs": [],
@@ -30,8 +30,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:20:05.395220400Z",
-     "start_time": "2023-10-22T15:20:05.217113500Z"
+     "end_time": "2023-10-23T15:32:43.969686600Z",
+     "start_time": "2023-10-23T15:32:43.771900400Z"
     }
    },
    "id": "8a3d8c0dae088afa"
@@ -46,8 +46,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:20:05.434110400Z",
-     "start_time": "2023-10-22T15:20:05.395220400Z"
+     "end_time": "2023-10-23T15:32:44.013252200Z",
+     "start_time": "2023-10-23T15:32:43.971686100Z"
     }
    },
    "id": "803203c18696f30e"
@@ -62,15 +62,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:20:05.466178500Z",
-     "start_time": "2023-10-22T15:20:05.434110400Z"
+     "end_time": "2023-10-23T15:32:44.054839600Z",
+     "start_time": "2023-10-23T15:32:44.011251300Z"
     }
    },
    "id": "9367ad7504390e5d"
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "panel_database = {}\n",
@@ -97,26 +97,26 @@
     "        panel_database[manufacturer] = {}\n",
     "    if series not in panel_database[manufacturer]:\n",
     "        panel_database[manufacturer][series] = {}\n",
-    "    panel_database[manufacturer][series][model] = modules[\"_\".join(name_split)].to_dict()"
+    "    panel_database[manufacturer][series][model] = {k:v if v != \"NaN\" else None for k,v in modules[\"_\".join(name_split)].to_dict().items()}"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:31:04.871428900Z",
-     "start_time": "2023-10-22T15:31:03.913312300Z"
+     "end_time": "2023-10-23T15:35:09.363144400Z",
+     "start_time": "2023-10-23T15:34:52.167037Z"
     }
    },
    "id": "6ee4ce4ee0930d53"
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "{'Technology': 'Mono-c-Si',\n 'Bifacial': 0,\n 'STC': 370.116,\n 'PTC': 343.9,\n 'A_c': 1.63,\n 'Length': nan,\n 'Width': nan,\n 'N_s': 96,\n 'I_sc_ref': 6.6,\n 'V_oc_ref': 70.1,\n 'I_mp_ref': 6.21,\n 'V_mp_ref': 59.6,\n 'alpha_sc': 0.002297,\n 'beta_oc': -0.199925,\n 'T_NOCT': 46.84,\n 'a_ref': 2.630367,\n 'I_L_ref': 6.604403,\n 'I_o_ref': 1.726423e-11,\n 'R_s': 0.360284,\n 'R_sh_ref': 539.995911,\n 'Adjust': 3.030361,\n 'gamma_r': -0.3509,\n 'BIPV': 'N',\n 'Version': 'SAM 2018.11.11 r2',\n 'Date': '1/3/2019'}"
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,25 +127,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:31:05.497097700Z",
-     "start_time": "2023-10-22T15:31:05.489868Z"
+     "end_time": "2023-10-23T15:35:16.099353500Z",
+     "start_time": "2023-10-23T15:35:16.092409900Z"
     }
    },
    "id": "68b560e333c58aca"
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "with open(\"G:/projects/solar-power-estimator/data/panel_database.json\", \"w\") as f:\n",
-    "    json.dump(panel_database, f)"
+    "    json.dump(panel_database, f, indent=2)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T15:31:08.099003900Z",
-     "start_time": "2023-10-22T15:31:06.276545700Z"
+     "end_time": "2023-10-23T15:35:20.300792100Z",
+     "start_time": "2023-10-23T15:35:17.321305700Z"
     }
    },
    "id": "a901483d655e4f8f"
@@ -156,7 +156,10 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-10-23T15:32:45.524261200Z"
+    }
    },
    "id": "49cd2b2eab0ef01"
   }
